<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_new">Login new Account</string>
    <string name="login">Login</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoe_e_store">shoe E store</string>
    <string name="welcome_to">Welcome to</string>
    <string name="next">Next</string>
</resources>
