<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:labelFor="@id/emailEditField"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/emailEditField"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailLabel"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:labelFor="@id/emailEditField"
            android:text="@string/password"
            app:layout_constraintLeft_toLeftOf="@id/emailEditField"
            app:layout_constraintTop_toBottomOf="@id/emailEditField"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:layout_constraintLeft_toLeftOf="@id/emailEditField"
            app:layout_constraintTop_toBottomOf="@id/passwordLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginNewBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/emailEditField"
            app:layout_constraintTop_toBottomOf="@id/passwordEditField"
            android:layout_marginTop="16dp"
            android:background="@color/purple_700"
            android:text="@string/login_new"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/loginAgainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@id/emailEditField"
            app:layout_constraintTop_toBottomOf="@id/loginNewBtn"
            android:text="@string/login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>